gccida/g2/store_bit_field
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/expmed.c:755:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode fieldmode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/expmed.c:763:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/expmed.c:765:4: error: expected ';' after expression
rtx v14; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/expmed.c:765:5: error: use of undeclared identifier 'v14'
rtx v14; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/expmed.c:768:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/expmed.c:769:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/expmed.c:775:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/expmed.c:779:4: error: expected ';' after expression
rtx last_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/expmed.c:779:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/expmed.c:781:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v30; // r11d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/expmed.c:783:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v32; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/expmed.c:789:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v38; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/expmed.c:795:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code insn_code; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/expmed.c:797:4: error: expected ';' after expression
rtx v46; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/expmed.c:797:5: error: use of undeclared identifier 'v46'
rtx v46; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/expmed.c:800:4: error: expected ';' after expression
rtx v49; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/expmed.c:800:5: error: use of undeclared identifier 'v49'
rtx v49; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/expmed.c:801:36: error: redefinition of parameter 'rtx'
 struct rtx_def *(  *genfun)( rtx, rtx); // r13 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/expmed.c:801:31: error: a parameter list without types is only allowed in a function definition
 struct rtx_def *(  *genfun)( rtx, rtx); // r13 
                              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_bit_field/src/obj/expmed.o] Error 1
